@@ -1,5 +1,7 @@
 --- CHANGELOG ---
 --- PyFMI-FUTURE ---
+    * Fixed an issue for dynamic_diagnostics, where failures to evaluate the Jacobian would result in invalid XML.
+
 --- PyFMI-2.17.1 ---
     * Fixed compilation issue with Cython 3.1.
     * Added a new flag for building which allows the user to specify the exact name of the FMIL library.
